R2.1.0-prep-bsas   March 30, 2022      Kukhee Kim (khkim)
            - branch out from R2.1.0 for developing/testing BSAS
            - build against timing/bsa R2.0.0-prep-bsas for developing
            - support incremental timestamp update for the BSA history buffer
              cooperate with the timing/bsa API layer changes from the last_timestamp branch


R2.1.0      Feb 22, 2022
            - enable type conversion to support float32/uint32/int32
            - support global PVs for BSSS Rate Controls
            - add macros $(SECN), $(EGU), $(ADEL), $(HOPR) and $(LOPR) for BSSS scalar
            - workaround for the off by one issue on the BSSS edef severity

R2.0.0      Dec 6, 2021
            - support Beam Synchronous Scalar Service (BSSS)

R1.9.0      Nov 19, 2021
            - upgrade to asyn R4.39-1.0.1
            - use 64bit integer for pulse Id PV
            
R1.8.4      2021-15-11 Carolina B Mattison
	    -Upgrade to asyn R4.39-1.0.0

R1.8.3      2021-11-04 Bruce Hill
			Fix YAMLLOADER_MODULE_VERSION macro

R1.8.2      Oct 11, 2021  M. Dunning (mdunning)
            - Upgrade to asyn R4.39-0.0.1, yamlLoader R2.2.0
            - Use bsa R1.2.0 since R1.2.1 is missing

R1.8.1      Jan 30, 2020        Kukhee Kim (khkim)
            - build with yamlLoader R2.1.1, cpsw/framework R4.3.2 and bsa R1.2.1

R1.8.0      Jan 29, 2020        Kukhee Kim (khkim)
            - build with yamlLoader R2.1.0, cpsw/framework R4.4.1, bsa R1.2.0 and buildroot-2019.08
R1.7.0      Nov 26, 2019        Kukhee Kim (khkim)
            - build with yamlLoader R2.0.0
            - implement named_root to support multiple blades system
              Remark: need to resolve re-entrant problem / will take more time

R1.6.3      Nov 18, 2019        Kukhee Kim (khkim)
            - build with asyn R4.32-1.0.0

R1.6.2      Oct 28, 2019        Kukhee Kim (khkim)
            - build with cpsw/framework R4.3.1, timing/bsa R1.1.5 and yamlLoader R1.1.5
